# OREN

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  adm.py  api.py  app.py  auth.py  cliente.py  constants.py  forms.py  models.py  schemas.py  views.py
src/assets/css/: styles.min.css
src/html/: acproposta.html  login.html
src/migrations/versions/: 14497c98077c_.py  21b412f2867f_.py  3bb2fd439a46_.py  6f960c95a4b9_.py  815ac1ecc87b_.py  c5133acbdf8e_.py
src/static/css/: sidebar.css  styles.css  teste.css
src/static/js/: app.min.js  dark.mode.js
src/static/scripts/: login.py  propostas_js.py  vendas.py
src/templates/: TESTE.html  _form_errors.html  acproposta.html  cadproposta.html  cliente.html  criarusuario.html  financeiro.html  index.html  login.html  sidebar.html  testeform.html
src/templates/htmx/: link.html  link_form.html
